--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>ENTRE ALAS - Alitas a Domicilio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body oncontextmenu="return false;">
     <div id="loader" class="loader">Cargando...</div>
     <header>
-        <img src="/images/logo-entrealas-sep24-2-transparente.png" alt="Entrega a domicilio" class="logotipo" loading="lazy">
+        <img src="images/logo-entrealas-sep24-2-transparente.png" alt="Entrega a domicilio" class="logotipo" loading="lazy">
         <p>ESPERA LO MEJOR</p>
     </header>
 
@@ -21,7 +21,7 @@
 
     <section id="proceso">
         <h2>¿Cómo Funciona?</h2>
-        <img src="/pedido.webp" alt="Proceso de pedido" class="imagen-responsiva" loading="lazy">
+        <img src="images/pedido.webp" alt="Proceso de pedido" class="imagen-responsiva" loading="lazy">
         <ol>
             <li>Realiza tu pedido a través de WhatsApp.</li>
             <li>Selecciona tus alitas y salsas del catálogo.</li>
@@ -32,13 +32,13 @@
 
     <section id="entrega">
         <h2>Entrega a Domicilio</h2>
-        <img src="/images/domicilio.webp" alt="Entrega a domicilio" class="imagen-responsiva" loading="lazy">
+        <img src="images/domicilio.webp" alt="Entrega a domicilio" class="imagen-responsiva" loading="lazy">
         <p>Todos nuestros pedidos son entregados a domicilio sin costo adicional. Si prefieres, puedes recoger tu pedido en la Farmacia GARY del ejido 20 de Abril.</p>
     </section>
 
     <section id="calidad">
         <h2>Calidad y Seguridad</h2>
-        <img src="/images/sanidad.jpeg" alt="Calidad" class="imagen-responsiva" loading="lazy">
+        <img src="images/sanidad.jpeg" alt="Calidad" class="imagen-responsiva" loading="lazy">
         <p>Nos tomamos muy en serio la calidad de nuestros productos. Sanitizamos todos los espacios utilizados para la preparación de los pedidos y garantizamos que nuestro personal mantenga una buena higiene. Nuestras alitas son almacenadas de manera segura y no pasan más de cuatro días en refrigeración para asegurar su frescura.</p>
     </section>
 
