--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ENTRE ALAS - Alitas a Domicilio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- lo que esta en el body es para que no puedan dar click derecho en la pagina y puedan guardar como las imagenes-->
 <body oncontextmenu="return false;">
     <div id="loader" class="loader">Cargando...</div>
     <header>
@@ -15,7 +16,7 @@
 
     <section id="descripcion">
         <h2>Nuestras Alitas</h2>
-        <img src="https://github.com/EA-DARKITCHEN/entrealas/blob/main/images/alitas_zasonas.webp" alt="Alitas" class="imagen-responsiva" loading="lazy">
+        <img src="images/alitas_zasonas.webp" alt="Alitas" class="imagen-responsiva" loading="lazy">
         <p>En ENTRE ALAS, nuestras alitas son sazonadas y marinadas con una receta única que hemos perfeccionado para ofrecerte un sabor rico y agradable. Cada alita es preparada para que salga crujiente y con una textura en boca inigualable, especialmente nuestro producto "Estilo Brayan", que se sirve con salsa aparte para mantener la cobertura crujiente.</p>
     </section>
 
