--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>ENTRE ALAS - Alitas a Domicilio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<!-- lo que esta en el body es para que no puedan dar click derecho en la pagina y puedan guardar como las imagenes-->
-<body oncontextmenu="return false;">
+<body>
     <div id="loader" class="loader">Cargando...</div>
     <header>
         <img src="images/logo-entrealas-sep24-2-transparente.png" alt="Entrega a domicilio" class="logotipo" loading="lazy">
