--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENTRE ALAS - Alitas a Domicilio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/icono_ea_diciembre.png" type="image/x-icon">
 </head>
 <body>
     <div id="loader" class="loader">Cargando...</div>
