--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="loader" class="loader">Cargando...</div>
     <header>
         <img src="images/logo-entrealas-sep24-2-transparente.png" alt="Entrega a domicilio" class="logotipo" loading="lazy">
-        <p>ESPERA LO MEJOR</p>
+        <p>ESPERA LO MEJOR!</p>
     </header>
 
     <section id="descripcion">
