--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/icono_ea_diciembre.png" type="image/x-icon">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9LY0V83S2D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9LY0V83S2D');
+</script>
 <body>
     <div id="loader" class="loader">Cargando...</div>
     <header>
